test/fail/enums_and_variants/inherit_enum.lly
#[
SyntaxError: 'Option' cannot be inherited from.
    from inherit_enum.lly:6:
]#

class abc < Option {
}
